Findbugs 1.3.6 says since we are using Java 1.5 or higher we should use Short.valueOf() instead of new Short().  This seems to be the common wisdom on the Internet http://jkingdon2000.blogspot.com/2007/01/new-integer5-versus-integervalueof5.html
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/plugins/XMLSpider@24828 67a373e5-eb02-0410-a15c-ee090a768436