@@ -176,7 +176,7 @@ class BtreeMultiFieldIndex<T extends IPersistent> extends Btree<T> implements Fi
                 v = new Byte(data[offs++]);
                 break;
               case ClassDescriptor.tpShort:
-                v = new Short(Bytes.unpack2(data, offs));
+                v = Short.valueOf(Bytes.unpack2(data, offs));
                 offs += 2;
                 break;
               case ClassDescriptor.tpChar:
